# models/movies.model.go
@@ -5,6 +5,7 @@ import (
 	"be-cinevo/utils"
 	"context"
 	"encoding/json"
+	"errors"
 	"fmt"
 	"time"
 
@@ -218,4 +219,47 @@ func HandleUpComingMovies() ([]dto.MovieResponse, error) {
 	}
 
 	return movies, nil
+}
+
+func FindMovieById(id int) (*dto.MovieResponse, error) {
+	conn, err := utils.DBConnect()
+	if err != nil {
+		return nil, err
+	}
+	defer conn.Close()
+
+	query := `
+    SELECT 
+        m.id, m.title, m.overview, m.vote_average, m.poster_path, m.backdrop_path, 
+        m.release_date, m.runtime, m.popularity, m.admin_id, m.created_at, m.updated_at,
+        COALESCE(array_agg(DISTINCT g.name) FILTER (WHERE g.name IS NOT NULL), '{}') AS genres,
+        COALESCE(array_agg(DISTINCT d.name) FILTER (WHERE d.name IS NOT NULL), '{}') AS directors,
+        COALESCE(array_agg(DISTINCT c.name) FILTER (WHERE c.name IS NOT NULL), '{}') AS casts
+    FROM movies m
+    LEFT JOIN movie_genres mg ON m.id = mg.movie_id
+    LEFT JOIN genres g ON mg.genre_id = g.id
+    LEFT JOIN movie_directors md ON m.id = md.movie_id
+    LEFT JOIN directors d ON md.director_id = d.id
+    LEFT JOIN movie_casts mc ON m.id = mc.movie_id
+    LEFT JOIN casts c ON mc.cast_id = c.id
+    WHERE m.id = $1
+    GROUP BY m.id`
+
+	rows, err := conn.Query(context.Background(), query, id)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+
+	dbMovies, err := pgx.CollectRows[Movie](rows, pgx.RowToStructByName)
+	if err != nil {
+		return nil, err
+	}
+
+	if len(dbMovies) == 0 {
+		return nil, errors.New("movie not found")
+	}
+
+	movie := toMovieResponse(dbMovies[0])
+	return &movie, nil
 }
