# routers/movies.router.go
@@ -7,6 +7,7 @@ import (
 
 func movieRouters(r *gin.RouterGroup){
 	r.GET("", controllers.GetAllMovies)
+	r.GET("/:id", controllers.GetMovieDetail)
 	r.GET("/now-showing", controllers.GetNowShowingMovies)
 	r.GET("/upcoming", controllers.GetUpComingMovies)
 }
